# corgi

./: Cargo.toml  README.md
crates/corgi/: Cargo.toml  README.md
crates/corgi-cli/: Cargo.toml
crates/corgi-macros/: Cargo.toml  README.md
crates/corgi-macros/src/: lib.rs
crates/corgi-macros/tests/: rpc_fn.rs
crates/corgi/src/: codec.rs  container.rs  lib.rs  protocol.rs  server.rs
crates/corgi/src/protocol/: codec.rs  parser.rs  types.rs
