[workspace]
members = ["crates/corgi", "crates/corgi-cli", "crates/corgi-macros"]
resolver = "3"

[workspace.dependencies]
thiserror = { version = "2.0.16" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = { version = "0.1.89" }
chrono = { version = "0.4.41", features = ["clock"] }
bytes = { version = "1.11.0" }
tokio = { version = "1.45.0", features = ["full"] }
futures = { version = "0.3" }
wincode = { version = "0.2.5" }
prost = { version = "0.14.3" }
