[package]
name = "corgi-macros"
version = "0.0.3"
description = "🦀 Rust based RPC macros"
license = "MIT"
edition = "2024"
repository = "https://github.com/realdarthbob/corgi"
documentation = "https://docs.rs/corgi-macros"
keywords = ["corgi", "udp", "rpc", "networking", "macro"]
categories = ["network-programming", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = { version = "1.0" }
proc-macro2 = { version = "1" }
bytes = { workspace = true }

[dev-dependencies]
corgi = { path = "../corgi" }
futures = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
