[package]
name = "corgi"
version = "0.0.1"
description = "🦀 Rust based RPC library on UDP"
license = "MIT"
edition = "2024"
repository = "https://github.com/realdarthbob/corgi"
documentation = "https://docs.rs/corgi"
keywords = ["corgi", "udp", "rpc", "networking", "library"]
categories = ["network-programming", "asynchronous"]

[dependencies]
corgi-macros = { version = "0.0.1", path = "../corgi-macros" }

prost = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
wincode = { workspace = true }
tracing = { workspace = true }
